--- a/pollster/templates/polls/index.html
+++ b/pollster/templates/polls/index.html
@@ -1,25 +1,16 @@
-{% extends 'base.html' %} {% block content %}
-<h1 class="text-center mb-3">Polls</h1>
-<h2>
-  <!-- This should come from a variable -->
-  {{name}} is {{age}}
-</h2>
-<h2>
-  {% if latest_question_list %} {% for questions in latest_question_list %}
-  <div class="card mb-3">
-    <div class="card-body">
-      <p class="lead">{{ questions.question_text}}</p>
-      <a
-        href="{% url 'polls:detail' question.id %}"
-        class="btn btn-primary btn-sm"
-        >Vote Now</a
-      >
-    </div>
-  </div>
-  {% endfor %} {% else %}
-  <p>No polls avaible</p>
+{% extends 'base.html' %} 
+{% block content %} 
+  <h1 class="text-center mb-3">Poll Questions</h1>
+  {% if latest_question_list %}
+    {% for question in latest_question_list %}
+      <div class="card mb-3">
+        <div class="card-body">
+          <p class="lead">{{ question.question_text }}</p>
+          <a href="{% url 'polls:detail' question.id %}" class="btn btn-primary btn-sm">Vote Now</a>
+        </div>
+      </div>
+    {% endfor %}
+  {% else %}
+    <p>No polls available</p>
   {% endif %}
-</h2>
 {% endblock %}
-
-<!--  ye vala kyu nhi execute ho rha /polls pe 'varun is 18' hona chahiye-->
